--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.8'
 volumes:
   home:
   workspaces:
+  minio-data:
   postgres-data:
-  minio-storage:
 
 services:
   app:
@@ -71,7 +71,7 @@ services:
       - "9000:9000"
       - "9001:9001"
     volumes:
-      - minio-storage:/data
+      - minio-data:/data
     environment:
       MINIO_ROOT_USER: user
       MINIO_ROOT_PASSWORD: password
