--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,13 +24,9 @@ services:
     entrypoint: sh
     command: -c 'mkdir -p /data/fasttrackml && minio server /data'
     environment:
-      MINIO_ADDRESS: ":9000"
-      MINIO_ROOT_USER: "YFptmVrlVdOgnHZ8Idse"
-      MINIO_ROOT_PASSWORD: "ZeKsyUJikIAJQVtYsQNtdXx8qv9eevL94qFOx0Jh"
+      MINIO_ROOT_USER: "user"
+      MINIO_ROOT_PASSWORD: "password"
       MINIO_CONSOLE_ADDRESS: ":9001"
-    ports:
-      - "9000:9000"
-      - "9001:9001"
 
   integration-tests:
     image: golang:1.20
@@ -44,8 +40,8 @@ services:
       - postgres
       - service
     environment:
-      AWS_ACCESS_KEY_ID: "YFptmVrlVdOgnHZ8Idse"
-      AWS_SECRET_ACCESS_KEY: "ZeKsyUJikIAJQVtYsQNtdXx8qv9eevL94qFOx0Jh"
+      AWS_ACCESS_KEY_ID: "user"
+      AWS_SECRET_ACCESS_KEY: "password"
       S3_BASE_URL: http://minio:9000
       FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
       FML_SERVICE_URI: http://service:5000
