--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,6 +1,13 @@
+# common service settings:
+LC_COLLATE=POSIX
+FML_LOG_LEVEL=DEBUG
+
+# database settings.
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 POSTGRES_HOSTNAME=localhost
-LC_COLLATE=POSIX
-FML_LOG_LEVEL=DEBUG
+
+# aws client settings.
+AWS_ACCESS_KEY_ID: "user"
+AWS_SECRET_ACCESS_KEY: "password"
