--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -1,8 +1,8 @@
-# common service settings:
-LC_COLLATE=POSIX
+# common service settings.
 FML_LOG_LEVEL=DEBUG
 
 # database settings.
+LC_COLLATE=POSIX
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
