--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,9 +40,9 @@ services:
       - postgres
       - service
     environment:
-      S3_BASE_URL: http://minio:9000
       FML_SERVICE_URI: http://service:5000
       FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
+      FML_S3_ENDPOINT_URI: http://minio:9000
       AWS_ACCESS_KEY_ID: "user"
       AWS_SECRET_ACCESS_KEY: "password"
 
