[FML-18] - use `postStartCommand` to init default `bucket` in minio.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,6 +43,8 @@
 		},
 		"ghcr.io/devcontainers/features/git:1": {},
 		"ghcr.io/devcontainers/features/github-cli:1": {},
-		"ghcr.io/dhoeric/features/k6:1": {}
-	}
+		"ghcr.io/dhoeric/features/k6:1": {},
+		"ghcr.io/christophermacgown/devcontainer-features/minio-client:1": {}
+	},
+	"postStartCommand": "bash -c 'mc config host add minio http://127.0.0.1:9000 user password && mc mb minio/fasttrackml'"
 }
