[FML-18] - PR remarks.

--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -11,3 +11,6 @@ POSTGRES_HOSTNAME=localhost
 # aws client settings.
 AWS_ACCESS_KEY_ID: "user"
 AWS_SECRET_ACCESS_KEY: "password"
+
+# s3 compatible storage settings.
+FML_S3_ENDPOINT_URI=http://localhost:9000
