--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       FML_LOG_LEVEL: debug
       FML_DATABASE_URI: postgres://postgres:postgres@postgres/postgres
-      FML_S3_ENDPOINT_URL: http://minio:9000
+      FML_S3_ENDPOINT_URI: http://minio:9000
       AWS_ACCESS_KEY_ID: "user"
       AWS_SECRET_ACCESS_KEY: "password"
 
