--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
   minio:
     image: minio/minio:latest
     entrypoint: sh
-    command: -c 'mkdir -p /data/fasttrackml && minio server /data'
+    command: -c 'mkdir -p /data/{bucket1,bucket2,bucket3} && minio server /data'
     environment:
       MINIO_ROOT_USER: "user"
       MINIO_ROOT_PASSWORD: "password"
