--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ fasttrackml
 
 # Local database
 fasttrackml.db*
+encrypted.db*
 
 # Imported integration tests
 tests/integration/python/*/*.src
@@ -20,3 +21,7 @@ mock_*
 
 # Misc
 .DS_Store
+
+# Optional workspace
+go.work
+*.code-workspace
