--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     name: Publish container image to DockerHub
     runs-on: ubuntu-latest
     environment: release
-    if: github.event.workflow_run.event == 'push' && github.event.workflow_run.conclusion == 'success' # && !github.event.repository.fork
+    if: github.event.workflow_run.event == 'push' && github.event.workflow_run.conclusion == 'success' && !github.event.repository.fork
     steps:
       - name: Checkout
         uses: actions/checkout@v3
