--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -14,8 +14,6 @@ builds:
       - CXX=o64-clang++
     flags:
       - -mod=readonly
-    ldflags:
-      - -linkmode external -extldflags '-static' -s -w -X github.com/G-Research/fasttrackml/version.version={{.Version}}
 
   - id: darwin-arm64
     main: ./
@@ -29,8 +27,6 @@ builds:
       - CXX=oa64-clang++
     flags:
       - -mod=readonly
-    ldflags:
-      - -linkmode external -extldflags '-static' -s -w -X github.com/G-Research/fasttrackml/version.version={{.Version}}
 
   - id: linux-arm64
     main: ./
@@ -88,7 +84,10 @@ archives:
       {{- if .Arm }}v{{ .Arm }}{{ end }}
     builds:
       - darwin-amd64
+      - darwin-arm64
       - linux-arm64
+      - linux-amd64
+      - windows-amd64
     # use zip for windows archives
     format_overrides:
     - goos: windows
