--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -16,8 +16,7 @@ USER vscode
 RUN go install github.com/vektra/mockery/v2@v2.30.16 \
  && go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.53.3 \
  && go install golang.org/x/tools/cmd/goimports@v0.11.0 \
- && go install mvdan.cc/gofumpt@v0.5.0 \
- && go install github.com/goreleaser/goreleaser@v1.18.2
+ && go install mvdan.cc/gofumpt@v0.5.0
 USER root
 
 # [Optional] Uncomment this line to install global node packages.
