--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run goreleaser in docker
-        run: make release
-          
+        run: make go-release
+
       - name: Upload release assets
         uses: softprops/action-gh-release@v1
         with:
