--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,31 +1,24 @@
 name: Release
 
 on:
-  release:
-    types:
-      - created
+  push:
+    tags:
+      - v*
 
 permissions:
   contents: write
 
 jobs:
-  goreleaser:
-    name: Goreleaser artifact build
+  golang-release:
+    name: Release Go binaries
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Run goreleaser in docker
-        run: make go-release
-
-      - name: Upload release assets
-        uses: softprops/action-gh-release@v1
         with:
-          files: |
-            ./dist/fasttrackml_Darwin_arm64.tar.gz
-            ./dist/fasttrackml_Darwin_x86_64.tar.gz
-            ./dist/fasttrackml_Linux_arm64.tar.gz
-            ./dist/fasttrackml_Linux_x86_64.tar.gz
-            ./dist/fasttrackml_Windows_arm64.zip
-            ./dist/fasttrackml_Windows_x86_64.zip
+          fetch-depth: 0
+
+      - name: Run GoReleaser
+        run: make go-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
