--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,28 +58,9 @@ jobs:
       contents: write
     steps:
       - name: Download artifact
-        uses: actions/github-script@v6
-        with:
-          script: |
-            let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: context.payload.workflow_run.id,
-            });
-            let matchArtifact = allArtifacts.data.artifacts.filter((artifact) => {
-              return artifact.name == "fasttrackml-archives"
-            })[0];
-            let download = await github.rest.actions.downloadArtifact({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               artifact_id: matchArtifact.id,
-               archive_format: 'zip',
-            });
-            let fs = require('fs');
-            fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/fasttrackml-archives.zip`, Buffer.from(download.data));
-
-      - name: Unzip artifact
-        run: unzip -d dist fasttrackml-archives.zip
+        run: gh run download ${{ github.event.workflow_run.id }} --repo ${{ github.event.workflow_run.repository.full_name }} --name fasttrackml-archives --dir dist
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - name: Create release
         uses: softprops/action-gh-release@v1
@@ -116,28 +97,9 @@ jobs:
           echo "tags=${tags[@]}" >> $GITHUB_OUTPUT
 
       - name: Download artifact
-        uses: actions/github-script@v6
-        with:
-          script: |
-            let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: context.payload.workflow_run.id,
-            });
-            let matchArtifact = allArtifacts.data.artifacts.filter((artifact) => {
-              return artifact.name == "fasttrackml-oci-image"
-            })[0];
-            let download = await github.rest.actions.downloadArtifact({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               artifact_id: matchArtifact.id,
-               archive_format: 'zip',
-            });
-            let fs = require('fs');
-            fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/fasttrackml-oci-image.zip`, Buffer.from(download.data));
-
-      - name: Unzip artifact
-        run: unzip fasttrackml-oci-image.zip
+        run: gh run download ${{ github.event.workflow_run.id }} --name fasttrackml-oci-image
+        env:
+          GH_TOKEN: ${{ github.token }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
