Centralize Go build configuration
- introduce authoritative .go-build-tags file
- use command-variable extension to read the tags from the VSCode settings
- use makefile in Dockerfile
- use makefile in Python integration tests
- pass build tags to golangci-lint

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,8 @@
 				"golang.Go",
 				"ms-python.python",
 				"pbkit.vscode-pbkit",
-				"redhat.vscode-yaml"
+				"redhat.vscode-yaml",
+				"rioj7.command-variable"
 			]
 		}
 	},
