--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Read build tags
         id: tags
-        run: echo tags=$(jq -r '."go.buildTags"' .vscode/settings.json) >> $GITHUB_OUTPUT
+        run: echo tags=$(cat .go-build-tags) >> $GITHUB_OUTPUT
 
       - name: Download formatters
         run: |
@@ -204,8 +204,7 @@ jobs:
       - name: Compute build args
         id: build-args
         run: |
-          echo tags=$(jq -r '."go.buildTags"' .vscode/settings.json) >> $GITHUB_OUTPUT
-          echo version=$(git describe --tags | sed 's/^v//') >> $GITHUB_OUTPUT
+          echo version=$(git describe --tags --always --match='v*' | sed 's/^v//') >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -229,7 +228,6 @@ jobs:
         with:
           context: .
           build-args: |
-            tags=${{ steps.build-args.outputs.tags }}
             version=${{ steps.build-args.outputs.version }}
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
